<resources>
    <string name="app_name">LoginSampleKotlin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign_up</string>
    <string name="login">login</string>
    <string name="user_email">user_email</string>
    <string name="user_password">user_password</string>
    <string name="create_user">create_user</string>
    <string name="ho_geldiniz">Hoş Geldiniz</string>
</resources>
